Fix navigation menu scrolling on pages with long menus
Add overflow scrolling to the fixed left-side navigation menu to prevent
menu items from being cut off on pages with many headings. The menu now
scrolls within the viewport when content exceeds available space.

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -330,6 +330,10 @@ nav {
   left: 50%;
   margin-left: -580px;
   text-align: right;
+  max-height: calc(100vh - 240px);
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-right: 10px;
 
   ul {
     list-style: none;
